slight tweak to prevent clipping

--- a/web/apps/labelstudio/src/components/Pagination/Pagination.styl
+++ b/web/apps/labelstudio/src/components/Pagination/Pagination.styl
@@ -141,3 +141,5 @@
     min-width 150px
     padding-left 16px
     box-sizing content-box
+    .select__list
+      padding-right 0
